src/objects/PMF_Finca_Categ_9_Cosecha_PostCosecha__c.object
<CustomObject>
    <fields>
        <fullName>Evaluaci_n_de_recoleccion__c</fullName>
        <label>Evaluación de recolección</label>
        <picklist>
            <picklistValues>
                <fullName>Evalúa la recolección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No evalúa la recolección</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluacion_del_despulpado__c</fullName>
        <label>Evaluación del despulpado</label>
        <picklist>
            <picklistValues>
                <fullName>Despulpadora limpia y en buen estado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se limpia la despulpadora o no está en buen estado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inocuidad_bodegas__c</fullName>
        <label>Inocuidad bodegas</label>
        <picklist>
            <picklistValues>
                <fullName>Buenas condiciones de limpieza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malas condiciones de limpieza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inocuidad_del_beneficio__c</fullName>
        <label>Inocuidad del beneficio</label>
        <picklist>
            <picklistValues>
                <fullName>Contaminación de fuentes de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de contaminación del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de café cert y no cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgo de mezcla de diferentes calidades</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 2, &apos;c. Bajo&apos;, IF (Puntaje_categoria__c &lt; 4, &apos;b. Medio&apos;, &apos;a. Alto&apos;))</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Cosecha-PostCosecha&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categ. 9 - Cosecha-PostCosech</relationshipLabel>
        <relationshipName>PMF_Finca_Categs_9_Cosecha_PostCosech</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Evaluacion_de_recoleccion__c</fullName>
        <formula>IF( ISPICKVAL(  Evaluaci_n_de_recoleccion__c , &apos;Evalúa la recolección&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Evaluación de recolección</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Evaluacion_del_despulpado__c</fullName>
        <formula>IF( ISPICKVAL(  Evaluacion_del_despulpado__c , &apos;Despulpadora limpia y en buen estado&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Evaluación del despulpado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Inocuidad_bodegas__c</fullName>
        <formula>IF( ISPICKVAL(  Inocuidad_bodegas__c , &apos;Buenas condiciones de limpieza&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Inocuidad bodegas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Inocuidad_del_beneficio__c</fullName>
        <formula>IF (OR(INCLUDES(Inocuidad_del_beneficio__c ,&apos;Ningún riesgo&apos;), ISBLANK( Inocuidad_del_beneficio__c )), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Inocuidad del beneficio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registro_de_recoleccion__c</fullName>
        <formula>IF( INCLUDES(  Registro_de_recoleccion__c , &apos;Con documentación/registros de soporte&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registro de recolección</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Registro_de_recoleccion__c + 
Puntaje_Evaluacion_de_recoleccion__c + 
Puntaje_Inocuidad_del_beneficio__c + 
Puntaje_Inocuidad_bodegas__c + 
Puntaje_Evaluacion_del_despulpado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registro_de_recoleccion__c</fullName>
        <label>Registro de recolección</label>
        <picklist>
            <picklistValues>
                <fullName>Adecuadamente identificado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con documentación/registros de soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adecuadamente separado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hay adecuadas medidas de trazabilidad</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categ. 9 - Cosecha-PostCosecha</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categ. 9 - Cosecha-PostCosecha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categs. 9 - Cosecha-PostCosech</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>